--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/puppettale?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
 # --- ??? ??? ?? ---
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=puppetTale_user
+spring.datasource.password=9428
 
 # --- JPA ---
 spring.jpa.properties.hibernate.show_sql=true
@@ -39,4 +39,4 @@ spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
 # Gemini
-api.key.gemini=${GEMINI_API_KEY}
+api.key.gemini=AIzaSyDxzTKyiM0-WFKFbwrOU_CSVIMHd5Vm2CA
