--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,14 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // PostgreSQL
+    implementation 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar { enabled = true }
+jar { enabled = false }
