--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=PuppetTale
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/puppettale?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
-# --- ??? ??? ?? ---
-spring.datasource.username=puppetTale_user
-spring.datasource.password=9428
+# --- 본인이 알맞게 입력 ---
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 # --- JPA ---
 spring.jpa.properties.hibernate.show_sql=true
@@ -19,24 +19,24 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 logging.level.com.crossnote=INFO
 logging.level.org.springframework.web=INFO
 
-# --- File Upload (??? ??? ??) ---
+# --- File Upload (모바일 호환성 개선) ---
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 
-#--- ??? ??? ?? ?? ---
+#--- 본인이 알맞게 경로 입력 ---
 spring.servlet.multipart.location=C:\\puppetTale_uploads\\files
 uploadPath=C:\\puppetTale_uploads\\temp
 
-# ??? ???? ???? ?? ?? ??
+# 모바일 브라우저 호환성을 위한 추가 설정
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.resolve-lazily=true
 spring.servlet.multipart.enabled=true
 
-# CORS ?? (??? ?? ??)
+# CORS 설정 (모바일 웹앱 지원)
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
 # Gemini
-api.key.gemini=AIzaSyDxzTKyiM0-WFKFbwrOU_CSVIMHd5Vm2CA
+api.key.gemini=${GEMINI_API_KEY}
