feat(fairytale): 동화 생성 기능

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -36,3 +36,10 @@ spring.web.cors.allow-credentials=true
 
 # --- Gemini ---
 api.key.gemini=${GEMINI_API_KEY}
+
+# --- AWS S3 ---
+cloud.aws.region=${AWS_REGION}
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
+
+app.s3.bucket=${AWS_S3_BUCKET}
