--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 
     // PostgreSQL
     implementation 'org.postgresql:postgresql'
+
+    // S3
+    implementation 'software.amazon.awssdk:s3:2.25.30'
 }
 
 tasks.named('test') {
