--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -40,6 +40,5 @@ api.key.gemini=${GEMINI_API_KEY}
 # --- AWS S3 ---
 cloud.aws.region=${AWS_REGION}
 cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
-cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
-
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}ㅇ
 app.s3.bucket=${AWS_S3_BUCKET}
