오타 수정 및 txt 파일 추적 끊기

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ out/
 
 src/main/resources/application.properties
 .env
+
+src/main/resources/prompts/ai_systemPrompt_template.txt
+src/main/resources/prompts/story_creation_template.txt
